# cc-tools

./: .gitignore  AUTHORING.md  README.md  claude-md-section.md  pyproject.toml  setup-claude.sh
articles/: apple-credentialed-fetch-brief.md  apple-credentialed-fetch-proposal.md  help-your-ai-read-research.md  jupyter-and-the-mcp-tradeoff.md  make-your-ai-work-permanent.md  multi-subject-personal-research-wiki.md  the-research-brief.md
cc_tools/: arxiv_fetch.py  dropbox_sync.py  fetch.py  md2pdf.py  webfetch.py  wiki_brief_start.py
hooks/: pre-commit
mcp/: jupyter.json
skills/: arxiv-search.md  math-review.md  notebook-narrate.md  paper-summary.md  wiki-brief.md  wiki-ingest.md  wiki-init.md  wiki-lint.md  wiki-project.md  wiki-promote.md  wiki-query.md  wiki-upgrade.md
templates/: synthesis.md  wiki-CLAUDE.md  wiki-schema.md
