[project]
name = "cc-tools"
version = "0.1.0"
description = "Standard Claude Code toolset — portable across all PhenomML systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "markitdown>=0.1.5",
    "nbconvert>=7.17.1",
    "pdfplumber>=0.11.9",
]

[project.scripts]
cc-markitdown = "markitdown.__main__:main"
cc-md2pdf     = "cc_tools.md2pdf:main"
cc-nbconvert  = "nbconvert.nbconvertapp:main"
cc-pdfplumber = "pdfplumber.cli:main"
cc-webfetch   = "cc_tools.webfetch:main"
cc-arxiv      = "cc_tools.arxiv_fetch:main"

[tool.setuptools.packages.find]
include = ["cc_tools*"]

[dependency-groups]
dev = []
