[project]
name = "cc-tools"
version = "0.1.0"
description = "Standard Claude Code toolset — portable across all PhenomML systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "markitdown[all]>=0.1.5",
    "nbconvert>=7.17.1",
    "pdfplumber>=0.11.9",
    "trafilatura>=2.0",
]

[project.scripts]
cc-markitdown = "markitdown.__main__:main"
cc-md2pdf     = "cc_tools.md2pdf:main"
cc-nbconvert  = "nbconvert.nbconvertapp:main"
cc-pdfplumber = "pdfplumber.cli:main"
cc-webfetch   = "cc_tools.webfetch:main"
cc-arxiv      = "cc_tools.arxiv_fetch:main"
cc-fetch      = "cc_tools.fetch:main"
cc-wiki-brief    = "cc_tools.wiki_brief_start:main"
cc-dropbox-sync  = "cc_tools.dropbox_sync:main"

[tool.setuptools.packages.find]
include = ["cc_tools*"]

[dependency-groups]
dev = []
